Добавлено окно ожидания выхода

--- a/Interface2.ui
+++ b/Interface2.ui
@@ -17,7 +17,9 @@
    <string notr="true">background-color: rgb(255, 255, 255);
 background-color: rgb(7, 7, 7);
 background-color: rgb(0, 0, 0);
-background-color: rgb(74, 74, 74);</string>
+background-color: rgb(74, 74, 74);
+background-color: rgb(179, 179, 179);
+background-color: rgb(170, 170, 170);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="font">
@@ -56,12 +58,13 @@ background-color: rgb(74, 74, 74);</string>
     </property>
     <property name="styleSheet">
      <string notr="true">selection-color: rgb(48, 255, 255);
+background-color: rgb(184, 184, 184);
 border-top-color: rgb(124, 119, 255);
 border-bottom-color: rgb(255, 255, 255);
 selection-color: rgb(60, 25, 255);</string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab_3">
      <property name="minimumSize">
@@ -97,9 +100,9 @@ selection-color: rgb(60, 25, 255);</string>
      <widget class="QPushButton" name="btn_closeO">
       <property name="geometry">
        <rect>
-        <x>256</x>
+        <x>257</x>
         <y>200</y>
-        <width>256</width>
+        <width>261</width>
         <height>151</height>
        </rect>
       </property>
@@ -236,9 +239,9 @@ selection-color: rgb(60, 25, 255);</string>
      <widget class="QPushButton" name="btn_installO">
       <property name="geometry">
        <rect>
-        <x>512</x>
+        <x>517</x>
         <y>200</y>
-        <width>256</width>
+        <width>251</width>
         <height>151</height>
        </rect>
       </property>
@@ -447,7 +450,7 @@ border: none;</string>
      <widget class="QPushButton" name="btn_installAr">
       <property name="geometry">
        <rect>
-        <x>511</x>
+        <x>513</x>
         <y>200</y>
         <width>256</width>
         <height>151</height>
@@ -468,7 +471,7 @@ border: none;</string>
      <widget class="QPushButton" name="btn_closeAr">
       <property name="geometry">
        <rect>
-        <x>256</x>
+        <x>257</x>
         <y>200</y>
         <width>256</width>
         <height>151</height>
@@ -491,7 +494,7 @@ border: none;</string>
        <rect>
         <x>768</x>
         <y>200</y>
-        <width>256</width>
+        <width>261</width>
         <height>151</height>
        </rect>
       </property>
@@ -773,8 +776,8 @@ border: none;</string>
    <widget class="QLabel" name="label_16">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>450</y>
+      <x>520</x>
+      <y>440</y>
       <width>351</width>
       <height>61</height>
      </rect>
@@ -789,8 +792,8 @@ border: none;</string>
    <widget class="QLabel" name="label_17">
     <property name="geometry">
      <rect>
-      <x>770</x>
-      <y>490</y>
+      <x>630</x>
+      <y>480</y>
       <width>101</width>
       <height>31</height>
      </rect>
